--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@
     list-style: none;
 }
 
+.container {
+    display: flex;
+    max-width: 75%;
+    margin: 0 auto;
+}
+
 
 /* ------------------ */
 
