--- a/src/index.css
+++ b/src/index.css
@@ -23,14 +23,67 @@
 
 
 /* ------------------ */
-
-header a {
-    color: #1C1C1C;
-}
 main {
     background-color: #1C1C1C;
 }
 
 footer {
     background-image: url(./assets/footer-bg.jpg);
+}
+
+
+
+/* HEADER SETTINGS */
+.header-flex {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-flex figure a img {
+    padding: 15px 0;
+}
+
+.header-flex nav{
+    height: 100%;
+    align-content: center;
+    font-weight: bold;
+    color: #464646
+}
+
+.header-flex ul{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.header-flex nav a:hover {
+    color: #0C7CEC;
+}
+
+header a {
+    color: #1C1C1C;
+}
+
+
+/* MAIN SETTINGS */
+
+.main-content, .links-container{
+    padding: 50px 0;
+}
+.links {
+    background-color: #0C7CEC;
+    font-size: 0.80rem;
+}
+.links-container {
+    max-width: 65%;
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 20px;
+    margin: 0 auto;
+}
+.single-link {
+    display: flex;
+    flex-flow: row nowrap;
 }
