--- a/src/index.css
+++ b/src/index.css
@@ -76,14 +76,25 @@ header a {
     background-color: #0C7CEC;
     font-size: 0.80rem;
 }
+
 .links-container {
     max-width: 65%;
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-between;
     gap: 20px;
     margin: 0 auto;
 }
 .single-link {
     display: flex;
     flex-flow: row nowrap;
+    align-items: center;
+}
+.single-link > img {
+    margin-right: 10px;
+    height: 75px;
+}
+.single-link > h3 {
+    font-weight: normal;
+    text-wrap: nowrap;
 }
