--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-/* generalitá */
+/* ----------------- generalitá ----------------- */
 
-*{
+* {
     list-style: none;
     text-decoration: none;
     color: white;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    transition: color 0.25s;
+    transition: all 0.25s;
 }
 
 :root {
@@ -21,6 +21,16 @@
     margin: 0 auto;
 }
 
+.active {
+    height: 5px;
+    position: relative;
+    border-bottom: 5px solid #0C7CEC;
+    bottom: -61px;
+}
+
+.ds-none {
+    display: none;
+}
 
 /* ------------------ */
 main {
@@ -36,46 +46,47 @@ footer {
     background-repeat: no-repeat;
 }
 
-.main-content, .links-container, .footer-links{
+.main-content,
+.links-container,
+.footer-links,
+.end-page {
     padding: 50px 0;
 }
 
 
-/* HEADER SETTINGS */
+/* ----------------- HEADER SETTINGS ----------------- */
 .header-flex {
+    height: 150px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
+
 .header-flex figure a img {
     padding: 15px 0;
 }
 
-.header-flex nav{
-    height: 100%;
+.header-flex nav {
     align-content: center;
     font-weight: bold;
-    color: #464646
+    color: #464646;
 }
 
-.header-flex ul{
+.header-flex ul {
     display: flex;
-    flex-direction: row;
+    align-content: center;
     gap: 30px;
 }
 
-.header-flex nav a:hover {
-    color: #0C7CEC;
-}
 
-header a {
+header a div {
     color: #1C1C1C;
 }
 
 
-/* MAIN SETTINGS */
+/* ----------------- MAIN SETTINGS ----------------- */
 
 .links {
     background-color: #0C7CEC;
@@ -90,64 +101,118 @@ header a {
     gap: 20px;
     margin: 0 auto;
 }
+
 .single-link {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
 }
-.single-link > img {
+
+.single-link>img {
     margin-right: 10px;
     height: 75px;
 }
-.single-link > h3 {
+
+.single-link>h3 {
     font-weight: normal;
     text-wrap: nowrap;
 }
 
-/* FOOTER */
+/* ----------------- FOOTER ----------------- */
 
-.container > img {
+footer .container>img {
     position: absolute;
     right: 300px;
-    bottom: 60px;
-    width: 500px;
+    bottom: 55px;
+    width: 600px;
     z-index: 1;
 }
+
 .footer-links {
     display: flex;
     flex-flow: column wrap;
     max-height: 500px;
-    max-width: 625px;
+    max-width: 550px;
 }
+
 .footer-links a {
     color: hsl(0, 0%, 50%);
 }
-.footer-links > div {
+
+.footer-links>div {
     margin-bottom: 15px;
 }
+
 .footer-links h5 {
     font-size: 1.2rem;
     margin-bottom: 15px;
     color: white;
 }
+
 .footer-links li {
     margin-bottom: 0.10rem;
 }
+
+
+/* ----------------- Endpage ----------------- */
 .end-page {
-    background-color: #464646;
+    background-color: #303030;
     z-index: 2;
     position: relative;
 }
+
 .endpage-flex {
     max-width: 75%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
 }
-.footer-socials {
 
+.btn {
+    padding: 1rem;
+    background-color: #303030;
+    border: 2px solid #0C7CEC;
+    cursor: pointer;
+}
+
+.footer-socials {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer-socials p {
+    color: #0C7CEC;
+    font-weight: bold;
+}
+
+.footer-socials ul {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 20px;
+}
+
+.footer-socials ul li {
+    filter: none;
+}
+
+/* ----------------- HOVERS -----------------  */
+.header-flex nav a div:hover,
+.btn:hover {
+    color: #0C7CEC;
 }
 
 .footer-links a:hover {
     color: white;
-} 
+
+}
+
+.footer-socials ul li:hover {
+    transform: scale(1.1);
+    filter: invert(32%) sepia(96%) saturate(1138%) hue-rotate(188deg) brightness(100%) contrast(104%);
+}
+
+#mainlogo:hover {
+    transform: scale(1.1);
+}
