--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
 
 .active {
     color: #0C7CEC;
+    /* line-height: 100%; */
 }
 
 .ds-none {
@@ -50,8 +51,29 @@ footer {
     padding: 50px 0;
 }
 
+.btn {
+    padding: 1rem;
+    background-color: #303030;
+    border: 2px solid #0C7CEC;
+    cursor: pointer;
+}
+
+.btn-blue {
+    padding: 1rem 4rem;
+    background-color: #0C7CEC;
+    cursor: pointer;
+    font-weight: bold;
+    border: 0;
+}
 
 /* ----------------- HEADER SETTINGS ----------------- */
+header {
+    position: sticky;
+    top: 0;
+    z-index: 50;
+    background-image: linear-gradient(to bottom, white, white, rgba(255, 255, 255, 0));
+}
+
 .header-flex {
     height: 150px;
     width: 100%;
@@ -84,7 +106,6 @@ header a div {
 
 
 /* ----------------- MAIN SETTINGS ----------------- */
-
 .links {
     background-color: #0C7CEC;
     font-size: 0.80rem;
@@ -115,6 +136,58 @@ header a div {
     text-wrap: nowrap;
 }
 
+.main-content {
+    position: relative;
+}
+
+.currentLabel {
+    position: absolute;
+    background-color: #0C7CEC;
+    padding: 1rem;
+    top: -30px;
+}
+
+/* ----------------- CARD STUFF ----------------- */
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 30px;
+    padding: 25px 15px 0;
+    justify-content: center;
+}
+
+.card {
+    width: calc((100% / 6) - (25px));
+    height: 100%;
+}
+
+.card div {
+    width: 100%;
+    height: 235px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.card h4 {
+    font-weight: normal;
+}
+
+.cardImg {
+    width: 100%;
+
+}
+
+/* ----------------- JUMBOTRON ----------------- */
+.jumbotron {
+    width: 100%;
+    height: 450px;
+    background-image: url(./assets/jumbotron.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 /* ----------------- FOOTER ----------------- */
 
 footer .container>img {
@@ -130,6 +203,8 @@ footer .container>img {
     flex-flow: column wrap;
     max-height: 500px;
     max-width: 550px;
+    position: relative;
+    z-index: 100;
 }
 
 .footer-links a {
@@ -163,13 +238,6 @@ footer .container>img {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-}
-
-.btn {
-    padding: 1rem;
-    background-color: #303030;
-    border: 2px solid #0C7CEC;
-    cursor: pointer;
 }
 
 .footer-socials {
@@ -212,4 +280,5 @@ footer .container>img {
 
 #mainlogo:hover {
     transform: scale(1.1);
+    box-shadow: 2px white;
 }
