--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@ footer {
     background-color: #0C7CEC;
     cursor: pointer;
     font-weight: bold;
-    border: 0;
 }
 
 /* ----------------- HEADER SETTINGS ----------------- */
@@ -256,6 +255,7 @@ footer .container>img {
     display: flex;
     flex-flow: row nowrap;
     gap: 20px;
+    line-height: 50%;
 }
 
 .footer-socials ul li {
